--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,10 @@ jobs:
         node-version: [ 14, 16, 18 ]
 
     steps:
-      - use: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup node v${{ matrix.node-version }}
-        use: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
