--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,15 +7,14 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    name: Test on Node v${{ matrix.node-version }}
     strategy:
       matrix:
         node-version: [ 14, 16, 18 ]
-
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup node v${{ matrix.node-version }}
+      - name: Setup Node v${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
